# horimetro

env/: dot.xinitrc
env/dot.config/openbox/: autostart
gui/: .gitignore  Makefile.am  configure.ac  horimetro.desktop  horimetro.desktop.in
gui/po/: LINGUAS
gui/src/: Makefile.am  last_command_frame.c  last_command_frame.h  main.c  main_display_frame.c  main_display_frame.h  services.c  services.h  tasks_frame.c  tasks_frame.h  window.c  window.h
hooks/: zshrc
horimetro_client/: Cargo.toml
horimetro_client/src/: main.rs
horimetro_server/: Cargo.toml
horimetro_server/src/: dbus_client.rs  gui.rs  main.rs  tasks.rs
