AUTOMAKE_OPTIONS = subdir-objects 

ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

AM_CPPFLAGS = ${horimetro_CFLAGS}

bin_PROGRAMS = horimetro

horimetro_SOURCES = last_command_frame.c \
                    tasks_frame.c \
                    main_display_frame.c \
										window.c \
                    main.c

horimetro_LDADD = ${horimetro_LIBS}

